k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supercheck-app
  namespace: supercheck
  labels:
    app.kubernetes.io/name: supercheck
    app.kubernetes.io/component: app
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: supercheck
      app.kubernetes.io/component: app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: supercheck
        app.kubernetes.io/component: app
    spec:
      serviceAccountName: supercheck
      securityContext:
        fsGroup: 1001
        runAsUser: 1001
        runAsGroup: 1001
        runAsNonRoot: true
      containers:
        - name: app
          image: ghcr.io/supercheck-io/supercheck/app:1.1.3-beta
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 20
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 40
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 300m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 2Gi
